# CV-Paper-Nuggets

./: .gitignore  LICENSE
Cilp_Walkability/: main.py  model.py  pyproject.toml
